--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
     "daisyui": "^2.6.3",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13"
