--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,53 @@
-click==8.0.4
-Flask==2.0.3
+aniso8601==9.0.1
+atomicwrites==1.4.0
+attrs==21.2.0
+autopep8==1.6.0
+Babel==2.9.1
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+blinker==1.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+click==8.0.3
+colorama==0.4.4
+coverage==6.1.2
+dnspython==2.1.0
+email-validator==1.1.3
+Flask==2.0.2
+Flask-BabelEx==0.9.4
+Flask-Cache==0.13.1
+Flask-Caching==1.10.1
 Flask-Cors==3.0.10
-itsdangerous==2.1.0
+Flask-HTTPAuth==4.5.0
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-RESTful==0.3.9
+Flask-Security-Too==4.1.3
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+idna==3.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
 Jinja2==3.0.3
-MarkupSafe==2.1.0
+MarkupSafe==2.0.1
+packaging==21.3
+passlib==1.7.4
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pycparser==2.21
+pyparsing==3.0.6
+pytest==6.2.5
+pytz==2021.3
+requests==2.26.0
 six==1.16.0
-Werkzeug==2.0.3
+soupsieve==2.3.1
+speaklater==1.3
+SQLAlchemy==1.4.27
+toml==0.10.2
+urllib3==1.26.7
+Werkzeug==2.0.2
+WTForms==3.0.0
