--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "chart.js": "^3.7.1",
     "daisyui": "^2.6.3",
     "pinia": "^2.0.11",
