--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+amqp==5.1.0
 aniso8601==9.0.1
 atomicwrites==1.4.0
 attrs==21.2.0
@@ -5,13 +6,19 @@ autopep8==1.6.0
 Babel==2.9.1
 bcrypt==3.2.0
 beautifulsoup4==4.10.0
+billiard==3.6.4.0
 blinker==1.4
+celery==5.2.3
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 coverage==6.1.2
+Deprecated==1.2.13
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
@@ -32,16 +39,19 @@ idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
+kombu==5.2.4
 MarkupSafe==2.0.1
 packaging==21.3
 passlib==1.7.4
 pluggy==1.0.0
+prompt-toolkit==3.0.28
 py==1.11.0
 pycodestyle==2.8.0
 pycparser==2.21
 pyparsing==3.0.6
 pytest==6.2.5
 pytz==2021.3
+redis==4.1.4
 requests==2.26.0
 six==1.16.0
 soupsieve==2.3.1
@@ -49,5 +59,8 @@ speaklater==1.3
 SQLAlchemy==1.4.27
 toml==0.10.2
 urllib3==1.26.7
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==2.0.2
+wrapt==1.14.0
 WTForms==3.0.0
