--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,8 +33,11 @@ Flask-Principal==0.4.0
 Flask-RESTful==0.3.9
 Flask-Security-Too==4.1.3
 Flask-SQLAlchemy==2.5.1
+Flask-SSE==1.0.0
 Flask-WTF==1.0.0
+gevent==21.12.0
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.0.1
@@ -64,3 +67,5 @@ wcwidth==0.2.5
 Werkzeug==2.0.2
 wrapt==1.14.0
 WTForms==3.0.0
+zope.event==4.5.0
+zope.interface==5.4.0
