--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ Babel==2.9.1
 bcrypt==3.2.0
 beautifulsoup4==4.10.0
 billiard==3.6.4.0
+bleach==4.1.0
 blinker==1.4
 celery==5.2.3
 certifi==2021.10.8
@@ -64,6 +65,7 @@ toml==0.10.2
 urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==2.0.2
 wrapt==1.14.0
 WTForms==3.0.0
