--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --host",
     "build": "vite build",
+    "dev": "vite --host",
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
@@ -12,11 +12,13 @@
     "chart.js": "^3.7.1",
     "daisyui": "^2.6.3",
     "pinia": "^2.0.11",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/cli-plugin-pwa": "~4.5.15",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
