--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "chart.js": "^3.7.1",
     "daisyui": "^2.6.3",
+    "dotenv": "^16.0.0",
     "pinia": "^2.0.11",
     "register-service-worker": "^1.7.1",
     "vue": "^3.2.31",
